--- a/蓝队.md
+++ b/蓝队.md
@@ -10,15 +10,16 @@
 
 小案例、分开讲-------分知识点讲解：
 
-31min   IIS +  .net  看日志    ----------小翻车、换个IIS的机子36min  看日志。POST的请求没有记录提交记录
+IIS +  .net  看日志    ----------小翻车、换个IIS的机子  看日志。POST的请求没有记录提交记录
 
-![image-20250105180640678](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250105180640678.png)
+![image](https://github.com/user-attachments/assets/569717dc-a418-42aa-98b8-69f4e6c4c35d)
 
-![image-20250105180947137](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250105180947137.png)
+![image](https://github.com/user-attachments/assets/f2dd108c-a26d-4f66-a846-f0b5d1caa042)
 
 先发现是有sqlmap，可能有sql注入，再看注入点为default.aspx  再看返回的状态码为200，那么就可以判断是遭受了sql注入攻击并且成功：
 
-![image-20250105183738436](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250105183738436.png)
+![image](https://github.com/user-attachments/assets/bfdb0946-b8b5-4687-9d21-316ebea0e4a5)
+
 
 采用post注入成功、可以发现post请求没有记录提交
 
