--- a/蓝队.md
+++ b/蓝队.md
@@ -23,49 +23,64 @@ IIS +  .net  看日志    ----------小翻车、换个IIS的机子  看日志。
 
 采用post注入成功、可以发现post请求没有记录提交
 
-![image-20250105184620414](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250105184620414.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/789abdf3-2f64-4d39-9096-a3bf2029fc53" />
+
 
 43min  php+apache  这里为thinkphp的网页      看apache的日志logs  2个程序日志error 和httpd：
 
 先找到web的对应apache下的日志记录、这里的日志就主要看打对勾的几个：
+![image](https://github.com/user-attachments/assets/e5b55b6f-be00-4c5a-8c6c-194956fac817)
 
-![image-20250105190215366](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250105190215366.png)
+
+
 
 模拟攻击，然后查看日志:
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/b25826da-8d3f-4b47-96ed-f4593de889b1" />
 
-![image-20250105191226791](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250105191226791.png)
 
-![image-20250105191315610](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250105191315610.png)
 
-![image-20250105191338586](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250105191338586.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/7b3cb77b-b00d-4868-bc2b-f14496b2d4ae" />
 
-#### 2
+
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/47df4b8a-d976-4439-bcbd-103648347186" />
+
+
+2
 
 卡了到第二节课
 
 找apache的日志。
 
-2min     web +tomcat   看日志，找后门文件：用一些在线或者本地下载的工具，还有蓝队应急响应工具箱：可以扫到后门，扫到后然后就在tomcat里看日志文件---一般日志为access的log文件就是记录登录访问的。
+1    web +tomcat   看日志，找后门文件：用一些在线或者本地下载的工具，还有蓝队应急响应工具箱：可以扫到后门，扫到后然后就在tomcat里看日志文件---一般日志为access的log文件就是记录登录访问的。
 
-9min  演示后台拿tomcat拿shell过程。
+  演示后台拿tomcat拿shell过程。
 
-![image-20250105224550644](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250105224550644.png)
+![image](https://github.com/user-attachments/assets/c6f97edd-a7e0-4cda-822c-daeb10d47db8)
+
+
 
 这里注意，2.war后需要将后门放一个目录就行，如1所示。序号2就是多了一层目录2，就等于需要访问2/2/2.jsp才能访问到。
 
-<img src="E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250105225206515.png" alt="image-20250105225206515" style="zoom:50%;" />
+![image](https://github.com/user-attachments/assets/b647ada9-6136-4367-9dca-29ecda976a3b)
+
+
+
 
 这里用2.war就只需要访问一层 2/2.jsp就可以访问到：
 
-![image-20250105225330854](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250105225330854.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/612c511f-f58a-432c-8470-a9d4417a8c44" />
 
-然后下来就是看tomcat的日志：
 
-![image-20250105225943538](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250105225943538.png)
+然后下来就是看tomcat的日志（因为上传的是tomcat）：
+
+![image](https://github.com/user-attachments/assets/3baa25b5-c2b0-47cc-b315-f9f92cda0c16)
+
+
 
 就可以发现2.jsp后门，然后分析：
 
-![image-20250105230238342](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250105230238342.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/2990dc7e-09cd-4b3c-8bd0-904058647b8f" />
+
 
 如果这里2.jsp是免杀的或者我们发现不了他是哥斯拉后门，或者2.jsp不存在，那么下来就是看流量包了。
 
@@ -73,51 +88,61 @@ IIS +  .net  看日志    ----------小翻车、换个IIS的机子  看日志。
 
 这里注意：wireshark抓包时候，抓不到本地操作的包，就是说如果你是在本地用哥斯拉操作本地的服务器，就是在主机上连接127.0.0.1的web后执行的流量是抓不到，这里是用kali上的哥斯拉操作，抓到的流量，抓的也是vm的网卡上的流量：
 
-![image-20250105232934574](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250105232934574.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/de28f540-877b-409a-9b92-ca4ac980abd0" />
+
 
 流量特征：
 
-![image-20250105233111331](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250105233111331.png)
+![image](https://github.com/user-attachments/assets/e71b6509-6f58-43b8-846a-5ab9a5bba44a)
+
 
 还可以将捕获到的流量包放蓝队工具箱中解密：
 
-![image-20250106002213797](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106002213797.png)
 
-![image-20250106002331063](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106002331063.png)
+
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/a8e60fbf-f530-475a-b505-1538f82c553e" />
+
 
 返回包解密：
 
-![image-20250106002717106](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106002717106.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/10bb82e2-e9d6-42da-92ee-30c8b23952d8" />
 
-26min  有的日志中可能没有记录或者日志就没有开，那么就需要看流量包来看-----打开靶场（jar包，开数据库），shiro漏洞，（这里都是先模拟攻击者攻击后然后蓝队人员如何排查）捕获到流量包后解密。这里是用jar包开的靶场，这种的日志就在命令终端中，没有记录的。：
 
-![image-20250106003217037](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106003217037.png)
+  有的日志中可能没有记录或者日志就没有开，那么就需要看流量包来看-----打开靶场（jar包，开数据库），shiro漏洞，（这里都是先模拟攻击者攻击后然后蓝队人员如何排查）捕获到流量包后解密。这里是用jar包开的靶场，这种的日志就在命令终端中，没有记录的。：
+
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/b5069f42-3509-4c7e-9bf6-c3e92f0dfe95" />
+
 
 有些日志中的记录可能还是加密过的，有时候还看不出来。这里测试shiro框架的流量。
 
 还是将环境放到虚拟机中，在本机进行抓虚拟机的包，因为本机抓本机流量抓不到：
 
-![image-20250106005102532](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106005102532.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/d1e56840-92b1-4c55-afba-eb73bf02d912" />
+
 
 抓包：
 
-![image-20250106005201546](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106005201546.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/207d527c-f890-4c34-9520-50cde74bfd6d" />
+
 
 抓到shiro框架的流量rememberMe 后放到解密：
 
 踩坑1、追踪http流，踩坑2、解密的只有rememberMe 后面的密文，不带rememberMe= 
 
-![image-20250106010215135](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106010215135.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/4c9b02f9-cdd6-49a2-8452-f1369b465b92" />
 
-39min  另一款蓝队工具
+
+另一款蓝队工具
 
 就是用来破解一些加密流量，打一些OA系统时候会用加密流量打，这款工具就方便我们解密流量：
 
-![image-20250106010424745](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106010424745.png)
+![image](https://github.com/user-attachments/assets/76c7bc9d-6dcd-4765-b5ed-ef69d2048e7c)
+
+
 
 日志中的post包没有记录怎么办呢？就看流量包，里面的post有记录。
 
-46min  web工具就看Web日志，入侵到服务器就看系统日志。
+ web工具就看Web日志，入侵到服务器就看系统日志。
 
 # 214：c2检测
 
@@ -127,7 +152,7 @@ IIS +  .net  看日志    ----------小翻车、换个IIS的机子  看日志。
 
 常规c2后门检测：
 
-13min     火绒剑，可以查看本地和外面的连接情况，还有可以看安全状态。爆红的需要注意。然后就找到后门后自己判断，完了上传微步、云沙箱。还可以用工具打开检测，还有看应急响应手册看一些可以上传后门的在线监测平台。
+u    火绒剑，可以查看本地和外面的连接情况，还有可以看安全状态。爆红的需要注意。然后就找到后门后自己判断，完了上传微步、云沙箱。还可以用工具打开检测，还有看应急响应手册看一些可以上传后门的在线监测平台。
 
 定性：后门为哪种c2工具，msf cs viper sliver vshell havoc 响尾蛇等
 
@@ -135,49 +160,58 @@ IIS +  .net  看日志    ----------小翻车、换个IIS的机子  看日志。
 
 火绒剑：
 
-![image-20250106200649237](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106200649237.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/4b17302b-9e14-42ce-bca4-16fd857f0f19" />
+
 
 找到后门可疑文件后，然后直接提交微步这类平台或者用工具箱中的威胁情报查询：
 
-![image-20250106201119019](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106201119019.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/9192f03d-63de-47da-b208-bb3662d5a414" />
+
 
 #### 封锁
 
-31min  处置   清理：进程结束后删除、    
+处置   清理：进程结束后删除、    
 
  ：防火墙封锁：1、进程名   2、网络限制     3、限制协议
 
-40min   防火墙演示            ip 封锁 或者进程封锁	类似于aliyun的安全组
+ 防火墙演示            ip 封锁 或者进程封锁	类似于aliyun的安全组
 
-![image-20250106202135288](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106202135288.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/37222437-938e-4cfe-8ccf-007344422fd9" />
+
 
 在出站阻止程序：
 
-![image-20250106202545191](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106202545191.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/3ece0568-ac6f-4ab6-a6c7-eb66acd4c395" />
+
 
 封ip：
 
-![image-20250106202925911](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106202925911.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/606341b8-a7c4-4761-92c2-f8acb80350d1" />
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/8c66f173-e351-4d5d-8d4d-30d71b25c24d" />
+
 
 还可以通过协议封。
 
 #### 排查
 
-52min  火绒剑查看启动项-----看有没有一些维权的后门
+火绒剑查看启动项-----看有没有一些维权的后门
 
-![image-20250106203530949](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106203530949.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/e7b75272-a461-453e-a105-e816358fc6a5" />
+
 
 就可以在启动项里进行排查：
 
-![image-20250106204022090](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106204022090.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/14f77288-60a1-403f-aefb-4312d795d0b9" />
 
-![image-20250106204358404](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106204358404.png)
+
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/91a68942-fffd-4ef9-bc36-0616b867c5d8" />
+
 
 #### 基线检测
 
 #### windows
 
-58min   基线检测：属于应急响应后面部分，结束处理后门后，就要提出修复建议，指出一些潜在威胁（哎，就是水报告一样，水任务的）混的。骗客户的。
+  基线检测：属于应急响应后面部分，结束处理后门后，就要提出修复建议，指出一些潜在威胁（哎，就是水报告一样，水任务的）混的。骗客户的。
 
 golin  需要管理员运行，运行后会对当前系统进行扫描。
 
@@ -185,69 +219,83 @@ d-eyes推荐，监测当前全部在威胁
 
 两款检测自身的软件    ------- golin和 windows基线：
 
-![image-20250106215749168](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106215749168.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/d08660af-ee96-4b37-872d-3fa55514544e" />
+
+
 
 ##### findall
 
 检测工具：
 
-![image-20250106220121291](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106220121291.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/58ef7741-b071-467f-8e59-48b175fd6d03" />
+
 
 检测目标就是将服务端上传到目标主机上执行，然后在c盘下产生文件result.hb，将此文件放到刚才的客户端中进行分析（这里运行都是管理员）：
 
-![image-20250106220856694](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106220856694.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/3a8f3982-70a9-47bb-bf02-37b5662f6c66" />
+
 
 得到分析结果：
 
-![image-20250106221023432](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106221023432.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/48011e3b-7e7f-44f2-afe2-0165e6bbf6d6" />
+
 
 ##### d-eye
 
 https://github.com/m-sec-org/d-eyes
 
-![image-20250106221712578](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106221712578.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/9f9abbd1-55b4-40e0-9a28-4afc16797ba3" />
 
 #### linux： 
 
-1h15min   linux 中进行检测可能存在威胁
+  linux 中进行检测可能存在威胁
 
 https://github.com/sun977/linuxcheckshoot       可以看到一些威胁软件，特权命令，定时任务等
 
-![image-20250106222822139](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106222822139.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/02c38274-ab5f-4fd3-9db0-fb8c6126e32f" />
+
 
 https://github.com/m-sec-org/d-eyes
 
-![image-20250106223247547](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106223247547.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/ce34e2de-e719-4669-9fd7-a12239f08c23" />
+
 
 https://github.com/selinuxG/Golin
 
-![image-20250106223522723](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106223522723.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/4e4348cf-f2b5-4922-a9b9-2685483c3f8e" />
 
-1h26min  linux 上线cs           cs后门的心跳包原因，所以导致在linux中会找不到通讯地址，就是有延迟
 
-![image-20250106224315652](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106224315652.png)
+ linux 上线cs           cs后门的心跳包原因，所以导致在linux中会找不到通讯地址，就是有延迟
+
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/8f5a6b57-f74b-45a8-8794-3f932b7ad57f" />
+
 
 执行命令产生linux后门、踩坑：这里细看，上面cs插件生成linux的为https 所以我们监听器也应该为https，这里是http的监听器，所以没有上线成功，重新走一遍成功上线：
 
-![image-20250106225116587](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106225116587.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/fbe5009b-371f-4071-94d6-cd2d18c5bc73" />
+
 
 上线后发现，linux没有开对应通讯连接，这里就是因为cs的心跳包导致的：
 
-![image-20250106225457544](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106225457544.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/b1fb9d88-68e4-4fc9-9eb1-b646a558fc75" />
+
 
 用刚才的检测工具来检测网络也没有发现有对外的连接，所以这就是cs的好处。msf就没有：
 
-![image-20250106225635573](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106225635573.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/dced5ebb-9d97-49dd-a5da-c0be1a6b079b" />
 
 
 
-1h34min  msf  linux上线       这下就可以看到通讯了，然后就可以用刚才的工具检测出来后门存在。
 
-![image-20250106230547085](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106230547085.png)
+ msf  linux上线       这下就可以看到通讯了，然后就可以用刚才的工具检测出来后门存在。
+
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/0738bfe5-8f60-486a-b93d-4c12c704a350" />
+
 
 msf没有心跳包，那么就可以检测出来通讯：
 
-![image-20250106230456031](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250106230456031.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/cc06062d-5020-4a37-9e57-092d6756f2ee" />
+
 
 # 215：挖矿
 
@@ -2334,3 +2382,18 @@ https://cloud.tencent.com/developer/article/2437292
 可以看到，还是有点用的，占用了一定的资源：
 
 ![image-20250210003208638](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250210003208638.png)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
