--- a/蓝队.md
+++ b/蓝队.md
@@ -1248,24 +1248,28 @@ https://mp.weixin.qq.com/s/LnqArTrAytMKtitGvplNug
 
 #### 采集：
 
-![image-20250118155845994](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250118155845994.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/5a6a74cd-f1b4-4a89-9c86-149e3beaf1fc" />
+
 
 Logkit
 
-15min   七牛Logkit
+ 七牛Logkit
 
 启动：
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/26e57c78-f491-4ac7-9e71-beae0d06b4d6" />
 
-![image-20250118160320955](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250118160320955.png)
+
 
 打开对应ip+port
-![image-20250118160344664](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250118160344664.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/47ace24c-5168-4e0f-b779-f023b708f8fd" />
+
 
 
 
 运行后采集的日志保存到服务器本地上（192.168.139.143）路径你指定的，然后也自带有分析日志的工具。
 
-![image-20250118173116762](E:\新建文件夹\新建文件夹\typora学习笔记软件\缓存\image-20250118173116762.png)
+<img width="420" alt="image" src="https://github.com/user-attachments/assets/6a10064a-dd4a-489e-915a-d02d79152acf" />
+
 
 20min  日志提权分析工具、只能对系统上面进行分析。
 
