--- a/基线检查/基线检查.md
+++ b/基线检查/基线检查.md
@@ -1,1 +1,130 @@
+# c2检测
+
+蓝队：封锁----溯源-----反制
+
+#### 检测
+
+常规c2后门检测：
+
+​     火绒剑，可以查看本地和外面的连接情况，还有可以看安全状态。爆红的需要注意。然后就找到后门后自己判断，完了上传微步、云沙箱。还可以用工具打开检测，还有看应急响应手册看一些可以上传后门的在线监测平台。
+
+定性：后门为哪种c2工具，msf cs viper sliver vshell havoc 响尾蛇等
+
+人工分析：数据包流量，文件逆向分析。平台分析：文件或者IP域名。
+
+火绒剑：
+
+![image-20250106200649237](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536539.png)
+
+找到后门可疑文件后，然后直接提交微步这类平台或者用工具箱中的威胁情报查询：
+
+![image-20250106201119019](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536540.png)
+
+#### 封锁
+
+  处置   清理：进程结束后删除、    
+
+ ：防火墙封锁：1、进程名   2、网络限制     3、限制协议
+
+   防火墙演示            ip 封锁 或者进程封锁	类似于aliyun的安全组
+
+![image-20250106202135288](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536541.png)
+
+在出站阻止程序：
+
+![image-20250106202545191](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536542.png)
+
+封ip：
+
+![image-20250106202925911](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536543.png)
+
+还可以通过协议封。
+
+#### 排查
+
+  火绒剑查看启动项-----看有没有一些维权的后门
+
+![image-20250106203530949](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536544.png)
+
+就可以在启动项里进行排查：
+
+![image-20250106204022090](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536545.png)
+
+![image-20250106204358404](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536546.png)
+
+#### 基线检测
+
+#### windows
+
+   基线检测：属于应急响应后面部分，结束处理后门后，就要提出修复建议，指出一些潜在威胁（哎，就是水报告一样，水任务的）混的。骗客户的。
+
+golin  需要管理员运行，运行后会对当前系统进行扫描。
+
+d-eyes推荐，监测当前全部在威胁
+
+两款检测自身的软件    ------- golin和 windows基线：
+
+![image-20250106215749168](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536547.png)
+
+##### findall
+
+检测工具：
+
+![image-20250106220121291](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536548.png)
+
+检测目标就是将服务端上传到目标主机上执行，然后在c盘下产生文件result.hb，将此文件放到刚才的客户端中进行分析（这里运行都是管理员）：
+
+![image-20250106220856694](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536549.png)
+
+得到分析结果：
+
+![image-20250106221023432](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536550.png)
+
+##### d-eye
+
+https://github.com/m-sec-org/d-eyes
+
+![image-20250106221712578](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536551.png)
+
+#### linux： 
+
+   linux 中进行检测可能存在威胁
+
+https://github.com/sun977/linuxcheckshoot       可以看到一些威胁软件，特权命令，定时任务等
+
+![image-20250106222822139](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536552.png)
+
+https://github.com/m-sec-org/d-eyes
+
+![image-20250106223247547](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536553.png)
+
+https://github.com/selinuxG/Golin
+
+![image-20250106223522723](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536554.png)
+
+  linux 上线cs           cs后门的心跳包原因，所以导致在linux中会找不到通讯地址，就是有延迟
+
+![image-20250106224315652](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536555.png)
+
+执行命令产生linux后门、踩坑：这里细看，上面cs插件生成linux的为https 所以我们监听器也应该为https，这里是http的监听器，所以没有上线成功，重新走一遍成功上线：
+
+![image-20250106225116587](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536556.png)
+
+上线后发现，linux没有开对应通讯连接，这里就是因为cs的心跳包导致的：
+
+![image-20250106225457544](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536557.png)
+
+用刚才的检测工具来检测网络也没有发现有对外的连接，所以这就是cs的好处。msf就没有：
+
+![image-20250106225635573](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536558.png)
+
+
+
+  msf  linux上线       这下就可以看到通讯了，然后就可以用刚才的工具检测出来后门存在。
+
+![image-20250106230547085](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536559.png)
+
+msf没有心跳包，那么就可以检测出来通讯：
+
+![image-20250106230456031](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536560.png)
 
