--- a/应急响应/应急.md
+++ b/应急响应/应急.md
@@ -1,1 +1,561 @@
+# 215：挖矿
+
+数字货币、现象：cpu/gpu拉满，网络堵塞，服务器卡顿。
+
+分析：进程找到文件，生成平台分析、网络找到外链，生成ip分析
+
+处置：排查入口攻击点，重启隔离主机，排查重启生效项（启动项，计划计时任务等）可以将挖矿病毒放到启动任务中。
+
+#### windows
+
+##### 1
+
+​    挖矿病毒在计算器重启后还是会自动运行。就需要删除后门。
+
+xmref'    挖矿病毒还要找到是哪个家族，执行后cpu拉满，而且还需要找有没有留后门自启动的
+
+启动挖矿进程：
+
+![image-20250107171359322](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536561.png)
+
+然后结束update64进程，重启电脑发现进程自己启动：
+
+![image-20250107171830734](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536562.png)
+
+上传微步分析域名，确定为挖矿进程：
+
+![image-20250107171949286](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536563.png)
+
+用火绒剑也发现启动项中有这个进程，应该是伪装为google的，来实现调用挖矿进程：
+
+![image-20250107172223936](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536564.png)
+
+将其禁用删除可能会删除失败，就先将对应进程结束，再查看注册表删除注册表后，重启查看是否清理干净：
+
+![image-20250107172543475](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536565.png)
+
+##### 2:
+
+xmrig.exe
+
+![image-20250107173341258](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536566.png)
+
+还是很容易发现的：
+
+![image-20250107173511565](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536567.png)
+
+分析文件：
+
+![image-20250107173617639](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536568.png)
+
+查看配置：
+
+![image-20250107173658776](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536569.png)
+
+分析url，基本锁定为挖矿：
+
+![image-20250107173741255](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536570.png)
+
+##### 3
+
+排查方式和上面一样：
+
+![image-20250107174100061](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536571.png)
+
+#### linux
+
+ update.sh  写任务，下载病毒，在主机上把别的挖矿病毒停了（让自己的脚本不会被影响），把自己的样本放上去。然后在写维权。
+
+**![image-20250107175001727](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536572.png)**
+
+![image-20250107175254452](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536573.png)
+
+
+
+   现象也是cpu拉满，网络卡顿。
+
+![image-20250107102200706](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536574.png)
+
+这种就是将sh加密处理的：
+
+![image-20250107175431840](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536575.png)
+
+还有将脚本编译的，要看里面的内容需要将反编译出来：
+
+![image-20250107175533539](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536576.png)
+
+#### 1：
+
+![image-20250107175714105](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536577.png)
+
+cpu拉满，还会对外通讯：
+
+![image-20250107180536165](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536578.png)
+
+top命令查看进程，找到占用cpu的进程PID，直接kill -9 就行：
+
+![image-20250107181004619](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536579.png)
+
+ 
+
+##### 靶场：
+
+这里环境懒，没有配， 以xd的视频为主。
+
+找到可疑文件，打开cinfig文件发现存在url，检测为矿池url。是先封堵在清理后门，而不是直接清理。
+
+![image-20250107190713565](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536580.png)
+
+发现有大量的外部连接：
+
+![image-20250107190934217](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536581.png)
+
+思路一样，还是找到占用率高的文件，打开里面的配置文件：
+
+![image-20250107191017205](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536582.png)
+
+上传在线的平台分析、基本确定为挖矿：
+
+![image-20250107191053427](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536583.png)
+
+先堵入口，在清理后门：
+
+下来的思路：看他是怎么打进来的。先排查服务器上的资产信息-----看有没有什么web服务，或者其他一些漏洞，弱口令，钓鱼等，是不是内网机器，内网打进来的。看日志排查：本台机器中是通过爆破进来的，看系统日志。
+
+看程序时间，基本定位入侵进来的时间：
+
+![image-20250107191226878](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536584.png)
+
+netstat -anpt  查看是否有web，这里没有web服务，所以就看系统日志：
+
+![image-20250107191548755](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536585.png)
+
+根据刚才的时间，然后再看登录成功和登录失败的临界点，就是符合攻击者一直测试然后进来的情况，总不能一次就登录成功了：
+
+![image-20250107191952881](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536586.png)
+
+可以查事件id：
+
+![image-20250107192639573](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536587.png)
+
+下来就是进行封堵，开个防火墙，封ip，改密码之类操作。
+
+
+
+1h 发现入口，利用解题系统（蓝队工具），下来就是清理挖矿病毒，结束进程，结束不掉，可能是计划任务影响的，就找到计划任务删除任务，但是发现还是结束不了进程，然后就在服务中找，找到了调用病毒的服务，禁用在删除服务，在结束进程就可以。
+
+结束进程后又自己启动，这种多半就是计划任务或者服务里有启动的：
+
+![image-20250107192925211](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536588.png)
+
+计划任务：
+
+![image-20250107192957932](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536589.png)
+
+删除计划任务后发现还是没法终止挖矿进程，那就在看看服务中是否还有对应的在运行，停止可疑服务，删除服务就需要在命令终端中敲del .........：
+
+![image-20250107193251920](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536590.png)
+
+停止服务后就可以结束进程：
+
+<img src="https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536591.png" alt="image-20250107193552740" style="zoom:67%;" />
+
+下来就是防护，但是发现重启后，电脑又自己执行命令，然后开始执行了挖矿程序，这里发现是刚才的计划任务中的遗留bat文件没有删除，刚才只是删除了计划任务，没有删除计划任务调用的程序。然后再封ip后期。反正就是将他维权的一系列留下来的操作找到并清理干净，使用重启看是否清除干净。
+
+重启电脑后刚才本来都结束的进程和删除的挖矿文件又启动出来，而且会自己运行一段命令窗口：
+
+![image-20250107193941026](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536593.png)
+
+可以从上面的计划任务中看到，你只是删除了计划任务，但是没有删除他调用的bat文件，所以没有清理干净，这个bat文件会调用过程已经禁用的服务，从而执行任务。那实战中你如果刚才忘了删bat文件，现在回去发现计划任务已经被你删了，找不到对应的bat文件在哪儿了，这时候就看刚才刚开机执行的那个命令行，从里面找信息，查到bat的路径：
+
+![image-20250107194219306](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536594.png)
+
+下来还是将刚才的服务停止：
+
+![image-20250107194322012](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536595.png)
+
+然后在重启就没事了，这时候才清理干净，下来就是防护，防火墙拉黑，改密码后续。
+
+
+
+### 后面看
+
+   linux    上期164day  可以看。这里vm的版本不合适。
+
+https://mp.weixin.qq.com/s/OuzkbDRVqeNmH_kgptjwug
+
+找到了进程文件，但是删除不了，上锁了，就需要解锁，再将几个核心的文件删除，再结束进程删除文件。
+
+![image-20250415160506608](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536596.png)
+
+
+
+# 216：勒索
+
+也是数字货币或者区块链
+
+危害较大，解密难，遇到了就交钱吧，，，原理是将你电脑上的许多文件进行加密，你自己看不了，只能支付赎金。
+
+传播方式和挖矿进入的方式一样。也有家族分类。
+
+不可逆的加密：
+
+记得快照，样本在虚拟机中：  还是可以上传到平台定性，然后解密，不过大部分自己都解密不了。下来就是找人帮解密。
+
+特征就是自己的文件后缀异常，然后打开内容是被加密的
+
+![image-20250108222500983](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536597.png)
+
+正常文件的后缀变了：
+
+![image-20250108222601570](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536598.png)
+
+![image-20250108222718040](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536599.png)
+
+可以将中毒的文件上传到一些平台上检测：
+
+![image-20250108223055123](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536600.png)
+
+  可逆的加密方式：可以解的勒索病毒。有工具，这里是通过勒索的邮箱人工分析到勒索病毒的解密工具，
+
+![image-20250108235834108](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536601.png)
+
+这款可以解密：
+
+![image-20250109000150851](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536602.png)
+
+使用解密工具成功解密，就是需要将要解密的文件放一起，放在解密文件路径下：
+
+![image-20250109001217168](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536603.png)
+
+
+
+  linux勒索
+
+![image-20250108214959501](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536604.png)
+
+
+
+  勒索病毒的防范，注意入口封锁。
+
+# 217：钓鱼防范
+
+主要还是溯源，根据发件人地址。
+
+ 可以看邮件的eml文件，从里面获取相关信息进而溯源。
+
+![image-20250109203524656](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536605.png)
+
+![image-20250109203715723](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536606.png)
+
+  真实钓鱼 
+
+下面这种，他两个域名不一样，钓鱼用的为白名单域名，但是底下为什么不用白名单呢，一方面是因为防溯源，一方面是会收到白名单域名官方的管制。
+
+![image-20250109204252890](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536607.png)
+
+明显为钓鱼的：
+
+![image-20250109204541325](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536608.png)
+
+  对钓鱼文件进行定性分析，蠕虫病毒，这钓鱼文件还是做过免杀的，里面有防沙箱，虚拟机，防逆向的。
+
+![image-20250109205722002](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536609.png)
+
+
+
+ 在服务器中运行
+
+在自己本地上也运行一下安天的分析工具，看看自己主机上有没有后门（ctf那个程序）
+
+  分析后门。在你的主机上获取你的所有邮件信息，然后尝试将他的邮件文件（后门文件）通过你的邮件账户发送到各个地方，典型蠕虫病毒。这里就是需要逆向和二进制的知识。
+
+就是自己中毒了，但不会分析，还可以就是找这个毒，看有没有人分析过。：
+
+![image-20250109210753248](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536610.png)
+
+##### 考你：
+
+  面试或者比赛  有时候会给你一个文件，让你分析这是啥。这里分析的文件里面为白名单域名，但是有时候是白名单域名也不一定是白的，他有可能被别人拿下整个服务器然后利用来攻击，
+
+有附件和没附件的邮件的eml内容不同
+
+给你一个，check.eml，让你开始分析有没有危害，什么危害：
+
+![image-20250109210906973](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536611.png)
+
+开始查，找：
+
+![image-20250109211239676](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536612.png)
+
+初步判断为垃圾钓鱼，还需要深入调查，那就得根据里面内容或者附件确认了：
+
+![image-20250109211604910](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536613.png)
+
+kali ------base64解码：
+
+![image-20250109212133047](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536614.png)
+
+解码后里面提示有解压密码，那么就猜测是不是有压缩包，而且有filename和application这种特征：
+
+![image-20250109212306086](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536615.png)
+
+![image-20250109212608463](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536616.png)
+
+基本确定是有附件的，那么目前是只给了你一个eml，没有附件。那就得将下面那些加密的数据导出为附件：
+
+那么一般为zip文件，但是也有可能为rar，所以我们在将filename解码：
+
+![image-20250109213208421](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536617.png)
+
+那就用kali将他导出：
+
+![image-20250109213645803](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536618.png)
+
+上传微步，查找资料定性：
+
+![image-20250109213818988](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536619.png)
+
+
+木马家族：Rozena
+
+![image-20250109215052307](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536620.png)
+
+# 218：爆破
+
+外网爆破成功率比较低。内网爆破比较常见，成功率较高。
+
+内网容易爆破，一方面是方便运营，还有也是因为内网本身就安全，你很难通讯到内网。
+
+#### linux---ssh
+
+面试问过：
+
+![image-20250109225720973](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536621.png)
+
+unbutu 的日志在/var/log/auth.log：
+
+![image-20250110121232616](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536622.png)
+
+   爆破测试，查看日志。----      ssh爆破
+
+没爆破前看日志中的成功和失败都没有：
+
+![image-20250110121725469](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536623.png)
+
+爆破后查看：
+
+![image-20250110121849377](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536624.png)
+
+![image-20250110121948961](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536625.png)
+
+
+
+#### windows
+
+这里有RDP、SMB没有wmi是因为wmi不会再目标日志系统留下痕迹，所以没有日志可以分析。
+
+   RDP安全日志  看关键字和事件ID     事件ID：4625/4624      登录失败/成功         登陆类型：2/3/5/10这几种类型也需要留意，一般就是爆破类型。
+
+这里看时间也可以判断为爆破，一秒的登录次数：
+
+![image-20250110123742101](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536626.png)
+
+爆破失败的id和类型：
+
+![image-20250110123818366](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536627.png)
+
+![image-20250110124111430](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536628.png)
+
+清除日志也会记录：
+
+![image-20250110145209569](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536629.png)
+
+  SMB
+
+sql（32）攻击dc（21）机
+
+![image-20250110145548270](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536630.png)
+
+
+
+![image-20250110145637220](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536631.png)
+
+
+
+MSSQL
+
+ sql 应用的日志存储。
+
+![image-20250110145946390](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536632.png)
+
+web（31）攻击sql
+
+![image-20250110150446085](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536633.png)
+
+![image-20250110150824070](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536634.png)
+
+
+
+FTP日志，找谁搭建的ftp就看谁的日志。谁提供的就找谁，不是日志都在windows系统里。
+
+#### 隧道技术
+
+当收到攻击者是通过隧道技术进来的，我们怎么处置发现。
+
+linux ------ icmp：    socks是代不出来icmp协议，icmp是底层协议。
+
+![image-20250110154103179](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536635.png)
+
+centos是我们的受害机，被攻击者建立了icmp通道进行通讯，我们需要找到通道并且关闭。
+
+使用工具可以捕获到icmp数据包的连接情况，找到发起icmp的进程id，来结束进程。
+
+![image-20250110152157879](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536636.png)
+
+然后在centos的机器上是看不到icmp的包对外的情况，为:::*    就是不知道远程ip，用这种netstat -anpt这种通讯是看不到icmp的网络流量。因为正常来说应该是和上面一样，有本地和远程ip的端口显示：
+
+![image-20250110152236816](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536637.png)
+
+所以网络是正常来说分析不到，那么就得借助工具来对icmp进行监控：
+
+[bpftrace对icmp进行监控，查看icmp包是哪个进程发出的_linux bpftrace跟踪发网络报文进程-CSDN博客](https://blog.csdn.net/native_lee/article/details/124751325)
+
+![image-20250110152558787](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536638.png)
+
+上传工具：
+
+![image-20250110152752693](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536639.png)
+
+![image-20250110153212916](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536640.png)
+
+监听找到icmp的行为：
+
+![image-20250110153543455](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536641.png)
+
+查看pid对应的进程：
+
+![image-20250110153700053](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536642.png)
+
+下来就是kill这个进程，然后删除对应的进程文件。
+
+  windows---icmp
+
+windwos自带监测icmp数据包，可以找到icmp的进程，进而找到发起进程的工具文件，然后分析。
+
+![image-20250110154914730](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536643.png)
+
+使用wireshark监听受害机的eth1网卡（和攻击机通讯）：
+
+![image-20250110155029360](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536644.png)
+
+这里还是只能分析到网络流量，但是无法知道进程和谁发起的这个进程，我们怎么阻止找到这个发起进程的文件：
+
+![image-20250110155202805](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536645.png)
+
+这里用到的是一款微软自带的抓包工具MessageAnalyzer，当然不止能抓icmp，还有Dns这些都可以，然后记得管理员运行才可以，抓到对应的icmp包后查看进程信息：
+
+![image-20250110160105494](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536646.png)
+
+注意：上面的icmp包要分析找对，别分析半天发现不是攻击者的那个数据包。
+
+然后查看pid后用进程查看工具（火绒剑）找到对应进程pid，就可以锁定对应的进程文件，进而清除或者分析溯源：
+
+![image-20250110160743375](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536647.png)
+
+# 219：docker
+
+近源+docker
+
+  docker中的镜像被植入挖矿病毒。服务器上有一个进程占用cpu，然后kill后也会自己启动，但找不到对应的文件，然后就发现这个进程运行在docker镜像里。
+
+先top命令发现有占用cpu过大的进程：
+
+![image-20250111152810757](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536649.png)
+
+ps -aux  查看进程，根据上面的top找到的pid号来查看进程所在的位置，发现在当前目录：
+
+![image-20250111153000766](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536650.png)
+
+然后 查看当前目录没有发现对应的文件：
+
+![image-20250111153132042](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536651.png)
+
+然后在看刚才的top进程中发现有个systemd的进程，这个一般就是 docker镜像进程运行的一个进程，那么结合我们刚才找不到进程文件，而且kill也结束不了进程，所以判断这个进程是在docker容器里：
+
+![image-20250111153227041](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536652.png)
+
+那下来就看docker来进一步排查了：
+
+1、查看dokcer进程 	2、看这个进程对应的历史命令     3、根据刚才top找到进程名为xmrig，所以只找有xmrig信息的。
+
+![image-20250111153745211](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536653.png)
+
+然后从上面也可以发现，这个文件似乎在 /home/miner/xmrig下。但是我们没有找到，那是因为这个镜像是在docker里，不在我们的本机上：
+
+![image-20250111154122847](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536654.png)
+
+然后就进入docker容器，发现了目标xmrig文件：
+
+![image-20250111154312151](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536655.png)
+
+那下来自然就很明显了，结束这个进程然后删除文件就行。当然不会这么简单，这里发现，结束进程后他又运行：
+
+![image-20250111154923906](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536656.png)
+
+  alils      dokcer和本机的关系就类似是虚拟机和本地之间的关系。那么就很清楚了，那么docker上的镜像文件自然也是在真机上。       我们就在docker上找到对应占用服务器进程的镜像，在找dokcer上的镜像的位置，在找其在真机下对应的位置。            先找镜像在哪---------->找到镜像在docker里的存储位置-------->在找对应在真机里的存储位置。   和虚拟机一样，找虚拟机里的文件，也是先找虚拟机在真机里的存储位置，在找其文件在真机里的位置
+
+![image-20250111155616068](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536657.png)
+
+![image-20250111155410024](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536658.png)
+
+使用dfimage从镜像中提取Dockerfile，在这里可以清晰地看到恶意镜像构建的过程。就是用dfimage可以看你的镜像到底是咋弄的，怎么运行起来的：
+
+![image-20250111155550397](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536659.png)
+
+这里就是docker的磁盘路径，dokcer会加载许多磁盘路径，下来就是我们一个一个试，看刚才对应文件是在/home/miner/xmrig/build 下，其实这是docker的路径下，我们就需要找看是在哪个磁盘路径下存储着：
+
+![image-20250111155711552](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536660.png)
+
+那找到文件下来就简单了，先传出来定性判断一下，在删除文件后再kill 进程，然后发现他就不会在继续重新运行了：
+
+![image-20250111160146797](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536661.png)
+
+
+
+  重新拉一次镜像
+
+#### 靶场
+
+​    docker本身漏洞
+
+先用docker搭建一个shiro的靶场，模拟红队拿下并植入哥斯拉的内存马，上传后门flag：
+
+![image-20250111171454566](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536662.png)
+
+  模拟红队入侵后蓝队排查。      翻车
+
+然后模拟蓝队排查，前面怎么发现被植入后门就不演示了，可以用docker监听网络的工具进行发现异常连接。
+
+下来就是排查：
+
+![image-20250111172034549](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536663.png)
+
+
+
+  有一个检查当前docker环境是否有漏洞的项目。第一次项目不用弄了，ubuntu不合适，适合第二个格式.deb文件。
+
+![image-20250111172508548](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536664.png)
+
+![image-20250111172737385](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536665.png)
+
+扫描出来的结果可以用来写一下修复建议等。
+
+
+
+  近源------宏
+
+近源最后也是得上线，就看好上线的通讯就行。 
+
+https://mp.weixin.qq.com/s/WBFTtAuyC7PauFZbNBja5Q
 
